# data-quality-checker

./: .gitignore  README.md  pyproject.toml
dqc/: __init__.py  checks.py  cli.py  config.py  loader.py  reporter.py
examples/: orders.csv  orders.yaml
tests/: __init__.py  test_checks.py
