[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-checker"
version = "0.1.0"
description = "Configurable data quality checker for CSV / JSONL / Parquet files. Console, JSON, or HTML reports."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Aslam Ahamed" }
]
keywords = ["data-quality", "etl", "validation", "csv", "parquet", "data-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Database",
]
dependencies = [
    "pandas>=1.5",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=10.0"]
html    = ["jinja2>=3.0"]
dev     = ["pytest>=7.0"]

[project.scripts]
dqc = "dqc.cli:main"

[project.urls]
Homepage = "https://github.com/intruderfr/data-quality-checker"
Issues   = "https://github.com/intruderfr/data-quality-checker/issues"

[tool.setuptools.packages.find]
include = ["dqc*"]
exclude = ["tests*", "examples*"]
